# prompt-compression-layer

./: README.md  environment.yml  pyproject.toml  requirements.txt
data/hf/: README.md
docs/: architecture.md  optimization_math.tex
docs/experiments/: feedback_scoped_contract_smoke.md  no_robots_llm_prompt_v3.md
examples/: no_robots_rich_prompt.txt
prompt_compiler/: __init__.py  cli.py  env.py  observability.py
prompt_compiler/candidates/: __init__.py  generation.py  prompt_candidate.py
prompt_compiler/data/: dataset_builder.py
prompt_compiler/eval/: embedding_distance.py  evaluator.py  extraction_metrics.py  pareto.py
prompt_compiler/models/: __init__.py  base.py  openai_client.py
prompt_compiler/operators/: full_prompt_proposer.py  llm_chunk_rewrite_prompt.txt  proposer.py
prompt_compiler/optimize/: __init__.py  credit_assignment.py  curriculum.py  feedback_optimizer.py  legacy_optimizer.py  optimizer.py  reward.py  search_state.py
prompt_compiler/prompt/: chunk.py  chunkers.py
prompt_compiler/reports/: candidate_preview.py  proposal_pool.py  writer.py
tests/: test_evaluator_and_optimizer.py  test_feedback_search.py  test_rewrite_and_pareto.py
