[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-compression-layer"
version = "0.1.0"
description = "Tokenizer-aware behavioral prompt compression compiler."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
adapters = [
  "huggingface_hub>=0.24",
  "openai>=1.93",
  "sentence-transformers>=3.0",
  "tiktoken>=0.7",
]

[project.scripts]
prompt-compiler = "prompt_compiler.cli:main"

[tool.setuptools.packages.find]
include = ["prompt_compiler*"]
